--- a/index.html
+++ b/index.html
@@ -206,6 +206,13 @@
                     </ul>
                 </div>
             </section>
+            <hr class="m-0" />
+            <!--More About Me-->
+            <section class="resume-section" id="moreaboutme">
+                <div class="resume-section-content">
+                    <a href="html/aboutme.html" target="_blank"><h2 class="mb-5" class="text-primary">More About Me!</h2></a>
+                </div>
+            </section>
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
