--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#moreaboutme" target="_blank">More About Me!</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#moreaboutme">More About Me!</a></li>
                 </ul>
             </div>
         </nav>  
