--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -38,7 +38,7 @@
                 <li>I also like to play other sports like pickleball and football for fun.</li>
             </ul>
         </li>
-        <li>What do you like to do for fun?
+        <li>What do I like to do for fun?
             <ul>
                 <li>I aso like to hang out with my friends and watch movies and tv shows.</li> 
             </ul>
@@ -48,7 +48,7 @@
                 <li>I am a sophomore at BYU.</li>  
             </ul>
         </li>
-        <li>What do you want to major in?
+        <li>What do I want to major in?
             <ul>
                 <li>I am looking into applying to the IS major in the business school.</li>  
             </ul>
