--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -12,7 +12,7 @@
         <a href="../index.html">Resume</a>
 </div>
     <div class="common mainbodyaboutme"><h2>Introduction</h2>
-    <ul class="left">
+    <ol class="left">
         <li>Who am I?
             <ul>
                 <li>My name is Kibson Elmore.</li>
@@ -58,7 +58,7 @@
                 <li>I like Data Analytics and numbers.</li> 
             </ul>
         </li>
-    </ul>
+    </ol>
         <h2 id="family">My Family</h2>
         <h3>
             Left to Right: Payson, Weston, Me, Sadie, Bethany, Libby, Mom, Dad
