--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -35,12 +35,12 @@
         </li>
         <li>What sports do I like to play for fun?
             <ul>
-                <li>I also like to play other sports like pickleball and football for fun.</li>
+                <li>I like to play other sports like pickleball and football for fun.</li>
             </ul>
         </li>
         <li>What do I like to do for fun?
             <ul>
-                <li>I aso like to hang out with my friends and watch movies and tv shows.</li> 
+                <li>I like to hang out with my friends and watch movies and tv shows.</li> 
             </ul>
         </li>
         <li>What year of school am I?
