--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#moreaboutme">More About Me!</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="html/aboutme.html" target="_blank">More About Me!</a></li>
                 </ul>
             </div>
         </nav>  
@@ -210,7 +210,7 @@
             <!--More About Me-->
             <section class="resume-section" id="moreaboutme">
                 <div class="resume-section-content">
-                    <a href="html/aboutme.html" target="_blank"><h2 class="mb-5" class="text-primary">More About Me!</h2></a>
+                    <a href="html/aboutme.html" target="_blank" class="bg-primary"><h2 class="mb-5" class="text-primary">More About Me!</h2></a>
                 </div>
             </section>
         </div>
