--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AboutMe</title>
+    <title>More About Kibson Elmore</title>
     <link rel="stylesheet" href="../css/stylesaboutme.css">
 </head>
 <body>
